# Ohmimetro

./: CMakeLists.txt  Ohmimetro.c  diagram.json  readme.md  wokwi.toml
include/cod_cores/: cod_cores.h
include/display/: ssd1306.h
include/init_config/: init_config.h
libs/cod_cores/: cod_cores.c
libs/display/: display_draws.c  ssd1306.c
libs/init_config/: init_config.c
